Fixed overflow on main page

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -21,6 +21,7 @@
     flex-direction: column;
     align-items: center;
     padding: 1em;
-    margin-top: .6em;
+    padding-top: .3em;
+    margin-top: 0;
     border-radius: 18px;
 }
